# Homeworks

./: README.md
hw_2/: base.py  car.py  exceptions.py  plane.py
hw_2/tests/: conftest.py  test_car.py  test_engine.py  test_plane.py
hw_3/: README.md  books_and_users.py  result.json
hw_4/: breweries_models.py  dogs_models.py  json_placeholder_models.py
hw_4/api_testing/: requirements.txt
hw_4/qa_ddt/: pytest.ini
hw_5/: conftest.py  test_admin_page.py  test_catalog.py  test_item_card.py  test_main_page.py  test_register_account.py
hw_5/selenium_example/: conftest.py  test_example.py
hw_5/selenium_waits/: conftest.py  test_implicit.py
hw_6/fixtures/: login_fixtures.py  products_action_fixtures.py
hw_6/pages/: admin_dashboard_page.py  admin_login_page.py  base_page.py  cart_page.py  checkout_page.py  comparison_page.py  main_page.py  product_page.py  registration_page.py  (+2 more)
hw_7/: .env  pytest.ini
hw_8/: parse_system_processes.py
hw_9/: .env  README.md  pyproject.toml  pytest.ini
hw_9/fixtures/: api_fixtures.py  ui_fixtures.py
hw_9/locators/: account_locators.py  catalog_locators.py  comparison_locators.py  item_page_locators.py  main_page_locators.py  shopping_cart_locators.py
hw_9/models/: api_models.py
hw_9/pages/: account_page.py  base_page.py  catalog_page.py  comparison_page.py  item_page.py  main_page.py  shopping_cart_page.py
hw_9/tests/test_api/: conftest.py  test_api_opencart.py
hw_9/tests/test_ui/: conftest.py  test_order_by_user_from_comparison_page.py  test_request_for_return.py  test_user_registration_from_checkout.py
(+37 files in other folders)
